--- a/templates/base.html
+++ b/templates/base.html
@@ -19,17 +19,23 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>          
+              <li class="nav-item">
+                <a class="nav-link" href="user">Account</a>
               </li>
+
               <li class="nav-item">
                 <a class="nav-link" href="login">Login</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
-              </li>
+              </li>    
+              
             </ul>
           </div>
         </div>
       </nav>
+
 
       {% block content %}
       {% endblock %}
