--- a/templates/user.html
+++ b/templates/user.html
@@ -13,8 +13,11 @@
 
     <h1>Welcome, {{session['user']}}</h1>
 
-    <form action="#" method="POST">
+    <form class="lForm" action="#" method="POST">
         <!-- the placeholder use for the first time that is empty, after user types it will have the email -->
-        <input type="email" placeholder="Enter Email" value="{{email if email}}">
+        <p class="lElement1">
+            <input type="email" name ="email" placeholder="Enter Email" value="{{email if email}}"></p>
+        <p class="lElement2">
+            <input type="submit" value="submit"></p>
     </form>
 {% endblock %}
