--- a/templates/user.html
+++ b/templates/user.html
@@ -13,11 +13,20 @@
 
     <h1>Welcome, {{session['user']}}</h1>
 
+    <p class="lElement1">
+        <input type="text" name ="user" value="{{session['user']}}"></p>
+
     <form class="lForm" action="#" method="POST">
         <!-- the placeholder use for the first time that is empty, after user types it will have the email -->
-        <p class="lElement1">
+        <p class="lElement3">
             <input type="email" name ="email" placeholder="Enter Email" value="{{email if email}}"></p>
         <p class="lElement2">
-            <input type="submit" value="submit"></p>
+            <input type="submit" value="Submit"></p>
     </form>
+
+    <form class="lForm" action="/delete">
+        <p class="lElement4">
+            <input type="submit" value="Delete"></p>
+    </form>
+
 {% endblock %}
