--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,10 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
+              </li>                
+              
+              <li class="nav-item">
+                <a class="nav-link" href="view">List</a>
               </li>    
               
             </ul>
