--- a/templates/login.html
+++ b/templates/login.html
@@ -16,6 +16,6 @@
         <p class="lElement1">
             <input  placeholder="Username" type="text" name="nm"></p>
         <p class="lElement2">
-            <input type="submit" value="submit"></p>
+            <input type="submit" value="Submit"></p>
     </form>
 {% endblock %}
